Changing fuseki to sparql querries